Changed trnaslation for our products

--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "en": "English",
   "ar": "Arabic",
   "home": "Home",
-  "our_products": "Home",
+  "our_products": "Our Products",
   "blogs": "Blogs",
   "stay_in_touch": "Stay in touch",
   "privacy_policy": "Privacy Policy",
