Updated contact us page UI

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -46,7 +46,7 @@
   "about_sleeves_desc11": "في المرة القادمة ، لا تنسَ أن تتسوق نمط الأكمام المفضل لديك واحصل على نمط واحد لإضافة لمسة من الأناقة إلى خزانة ملابسك.",
   "our_story_desc1": "بدأت قصتنا في العام   2018، عندما نيشا و شمي، الذينا التقيا صدفة في الفجيرة، ارتبطا بحبهما للملابس والأناقة، ملهمينهما لإطلاق نيش اومي. وقد تضافرت صداقتهما وشغفهما مع الثقافة الإماراتية والتقاليد الإسلامية لتكين مجموعة فاخرة من العبايات. في فترة قصيرة من 4  الى 5 شهراً، فازة نيش اومي أقلاب مع حساسيتها المتواضعة والذوق للنوعها.",
   "our_story_desc2": "نيش اومي يستكشف الإبداع غير المستغلة والجماليات التي يمكن أن تضيف المزيد إلى هذه القطعة من الملابس. الهدف هو التقاط التراث، والجاذبية العالمية، والتواضع من خلال التفاصيل، والتخفيضات الجديدة، والأساليب. في رحلتهم لخلق اتجاه في الأزياء الإسلامية للمرأة، نيش اومي يترك معيارا من خلال كونها العلامة التجارية للمرأة الرائعة، من حيث الملكية، والإدارة، والعملاء.",
-  "privacy_policy_effective_date": "Effective Date: January 1, 2020",
+  "privacy_policy_effective_date": "تاريخ السريان: 1 يناير 2020",
   "privacy_policy_desc1.1": "nishOmi (collectively, “us” or “we”) understand that your privacy is important to you. We are committed to respecting your privacy and protecting your personal data, which is any information that is capable of identifying you as an individual person, collected via all websites or apps that post a link to this Privacy Policy (collectively, “the Sites”). This Privacy Policy describes how we handle and protect your personal data in connection with the Sites, in our capacity as data controllers. Please see our ",
   "privacy_policy_desc1.2": " for more information about our online terms and policies in general.",
   "privacy_policy_subtitle1": "Information we collect",
@@ -135,8 +135,8 @@
   "footer_desc": "تجمع نيش اومي بين التصميمات الأصلية والنسيج المختار بدقة للتحدث على الفور بلغة الأناقة والرفاهية والموضة المحتشمة.",
   "fashion": "اسلوب",
   "inspiration": "وحي - الهام",
-  "blog1_published_date_and_author": "Sep 28th, 2020 by Admin",
-  "blog2_published_date_and_author": "Oct 08th, 2020 by Admin",
+  "blog1_published_date_and_author": "28 سبتمبر ، 2020 بواسطة Admin",
+  "blog2_published_date_and_author": "08 أكتوبر 2020 بواسطة Admin",
   "contact_us": "اتصل بنا",
   "nishomi": "نسش اومي",
   "store_location": "موقع المركز",
@@ -155,7 +155,10 @@
   "story_title": "عبايات نيش اومي",
   "story_subtitle": "للاناقة تقليدي",
   "contact_details": "بيانات الاتصال",
-  "view_details": "View Details",
+  "view_details": "عرض التفاصيل",
+  "address": "عنوان",
+  "email": "البريد الإلكتروني",
+  "contat_no": "رقم الاتصال.",
   "button": {
     "show_interest": "مشاهدة الفائدة",
     "order_now": "طلبية  الآن",
