--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -156,6 +156,9 @@
   "story_subtitle": "for traditional Elegance",
   "contact_details": "Contact Details",
   "view_details": "View Details",
+  "address": "Address",
+  "email": "Email",
+  "contat_no": "Contact No.",
   "button": {
     "show_interest": "Show Interest",
     "order_now": "Order Now",
