whatsapp icon added

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -158,7 +158,7 @@
   "view_details": "عرض التفاصيل",
   "address": "عنوان",
   "email": "البريد الإلكتروني",
-  "contat_no": "رقم الاتصال.",
+  "contact_no": "رقم الاتصال.",
   "button": {
     "show_interest": "مشاهدة الفائدة",
     "order_now": "طلبية  الآن",
