--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -158,7 +158,7 @@
   "view_details": "View Details",
   "address": "Address",
   "email": "Email",
-  "contat_no": "Contact No.",
+  "contact_no": "Contact No.",
   "button": {
     "show_interest": "Show Interest",
     "order_now": "Order Now",
