--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -148,6 +148,8 @@
   "code": "كود",
   "size": "مقاس",
   "custom_size": "مقاس المخصص",
+  "in_inches": "بالبوصة",
+  "aed": "درهم إماراتي",
   "full_length": "الطول الكامل",
   "sleeve_length": "طول الأكمام",
   "bust": "الإفلاس",
