--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -138,7 +138,7 @@
   "blog1_published_date_and_author": "Sep 28th, 2020 by Admin",
   "blog2_published_date_and_author": "Oct 08th, 2020 by Admin",
   "contact_us": "Contact Us",
-  "nishomi": "Nishomi",
+  "nishomi": "nishomi",
   "store_location": "Store Location",
   "location_address_line1": "NishOmi Designer Abayas",
   "location_address_line2": "Shop 5, Opp. Bin Moosa Central Pharmacy, ",
@@ -148,6 +148,8 @@
   "code": "Code",
   "size": "Size",
   "custom_size": "Custom Size",
+  "in_inches": "in inches",
+  "aed": "AED",
   "full_length": "Full Length",
   "sleeve_length": "Sleeve Length",
   "bust": "Bust",
