UI and content changes

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -12,14 +12,14 @@
   "copyright": "العبايات نيش اومي 2020 ((c",
   "traditional_elegance_details": "تجمع نيش أومي بين التصاميم الأصلية والنسيج الذي تم اختياره بدقة للتحدث على الفور بلغة الأناقة والفخامة والأزياء المتواضعة. تم تصميم كل قطعة لتكون الأفضل من نوعها مع جودة متميزة وتصاميم بدون الامثال  لها مخصصة للاحتفال بالنساء. الجذور في شغف الأزياء الراقية، يهدف  نيش أومي إلى تحقيق التطور لجعل كل يوم يوم الأكثر عصرية.",
   "our_founders": "مؤسسونا",
-  "founder_shemi_desc": "شيمي, هي الحالم بين الاثنين. انها آثار مرة أخرى بأحباب للملابس والأزياء إلى طفولتها وسنوات المراهقة. من ولاية كيرالا-الهند، أمضت بعض الوقت في تجربة الملابس التقليدية. إن الوَرَق مع الهدف الجماعي، والاستفادة من الأزياء الإسلامية، واكتشاف إمكاناتها على الصعيد العالمي، هو في الواقع حلم تحقيق بالنسبة لها. تجد الفرح في ابتسامة الرضا على عملائها.",
-  "founder_nisha_desc": "نيشا، هي في الأصل كيرلية من الهند، هي بنت أعمالة متحمس تحركه مبادئ الإبداع والعمل الشاق. و هي تجد ارتياحاً هائلاً في العثور على الجدة في التصاميم والحداثة في الملابس. متحمس والإثارة لأنها تقدم، نيشا، هي بالتأكيدة تسترشد بقوة من قبل العاطفة للأزياء والتشويق في إدخال التصاميم الأصلية إلى السوق.",
+  "founder_shemi_desc": "شيمي هو الحالم بين الاثنين. تعود شغفها بالملابس والأزياء إلى سنوات طفولتها ومراهقتها. أمضت وقتًا في تجربة الملابس التقليدية. إن الصدى مع الهدف الجماعي ، والاستفادة من الأزياء الإسلامية ، واكتشاف إمكاناتها على مستوى العالم هو بالفعل حلم تحقق لها. تجد الفرح في ابتسامة الرضا على عملائها.",
+  "founder_nisha_desc": "نيشا هي رائدة أعمال شغوفة تدفعها مبادئ الإبداع والعمل الجاد. تجد رضا كبير في إيجاد التجديد في التصميمات والحداثة في الملابس. نيشا ، متحمسة ومتحمسة مع تقدمهم ، هي بالتأكيد الفاعل الذي يسترشد بشدة بشغف الموضة والإثارة في تقديم التصميمات الأصلية إلى السوق.",
   "exclusive_store": "متجرنا الحصري",
   "exclusive_store_desc": "متجرنا الحصري في ...... هي وجهة مفضلة لجمع العباياة الفاخرة ويرتدي المصمم. بالإضافة إلى مجموعة أنيقة، يوفر المتجر راحة المصممين والموظفين الإناث لاحتياجاتك لتخصيص الزي الخاص بك. قم بزيارة لتجربة تسوق لا تشوبها شائبة أن يترك لك مع إضافات لا تعوض إلى خزانة الملابس الخاصة بك.",
   "customized_designer_wear": "مصمم مخصص ارتداء",
   "unique_designs": "تصاميم فريدة من نوعها",
-  "women_employees": "موظفات",
-  "spacious_parking": "وقوف السيارات واسعة",
+  "women_employees": "تدار من قبل السيدات",
+  "spacious_parking": "في قلب المدينة",
   "abaya_then_and_now": "أبايا : حينئدأ و الأن",
   "abaya_then_and_now_desc1": ".عبايات أو رداء طويل ، يُعرف شعبياً باسم العباية ، يُشار إليه أيضًا باسم او ابا ، اباه ، كلها تمثل هذه الملابس اليومية التي تغطي الجسم بالكامل بسهولة.",
   "abaya_then_and_now_desc2": ".كانت ترتدي هذه الملابس في البداية من قبل النساء المسلمات في جميع أنحاء الشرق الأوسط ، ولكن الآن مع تزايد الطلب على العباية على مستوى العالم ، يرتديها غير المسلمين كأزياء راقية .  عادة ما تكون سوداء اللون ، والآن تأتي في أنماط مختلفة ، ومعظمها مطرز",
@@ -116,8 +116,6 @@
   "terms_of_use_subtitle9": "9. Privacy",
   "terms_of_use_9_desc1.1": "nishOmi understands that your privacy is important to you and nishOmi is committed to respecting your privacy and to protecting your personally-identifiable information (which is also referred to in some contexts and under some applicable laws as your personal data). nishOmi’s ",
   "terms_of_use_9_desc1.2": " describes how nishOmi uses and protects your personally-identifiable information, as well as how and with whom nishOmi may share that information. YOU ARE ENCOURAGED TO PRINT AND TO READ THE PRIVACY POLICY CAREFULLY AND TO CONTACT nishOmi IF YOU HAVE ANY QUESTIONS ABOUT nishOmiS PRIVACY POLICY OR THESE TERMS.",
-  "terms_of_use_subtitle10": "10. Governing law; jurisdiction",
-  "terms_of_use_10_desc1": "These Terms are governed by the laws of the State of New York without reference to the principles of conflicts of laws thereof.",
   "featured_products": "منتجات مميزة",
   "choice_for": "اختيارك الى",
   "elegance_and_glamour": "اناقة و بريق",
