--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -12,14 +12,14 @@
   "copyright": "© 2020 Nishomi Abayas",
   "traditional_elegance_details": "NishOmi combines original designs and meticulously chosen fabric to instantly speak the language of elegance, luxury, and modest fashion. Every piece is designed to be the best of its kind with premium quality and matchless designs dedicated to celebrating women. Rooted in a passion for couture, NishOmi aims to bring sophistication to make every day your most fashionable day.",
   "our_founders": "Our Founders",
-  "founder_shemi_desc": "Shemi is the dreamer among the two. She traces back her love for clothing and fashion to her childhood and teenage years. Hailing from Kerala-India, she spent time in experimenting with traditional attires. Resonating with the collective goal, tapping on Islamic fashion, and discovering its potential globally is indeed a dream come true for her. She finds joy in the smile of contentment on her customers.",
-  "founder_nisha_desc": "Nisha, originally a Malayali from India, is a passionate entrepreneur who is driven by the principles of creativity and hard work. She finds immense satisfaction in finding novelty in the designs and modernity in clothing. Excited and thrilled as they progress, Nisha, is definitely the doer strongly guided by the passion for fashion and thrill in introducing original designs to the market.",
+  "founder_shemi_desc": "Shemi is the dreamer among the two. She traces back her love for clothing and fashion to her childhood and teenage years. She spent time in experimenting with traditional attires. Resonating with the collective goal, tapping on Islamic fashion, and discovering its potential globally is indeed a dream come true for her. She finds joy in the smile of contentment on her customers.",
+  "founder_nisha_desc": "Nisha is a passionate entrepreneur who is driven by the principles of creativity and hard work. She finds immense satisfaction in finding novelty in the designs and modernity in clothing. Excited and thrilled as they progress, Nisha, is definitely the doer strongly guided by the passion for fashion and thrill in introducing original designs to the market.",
   "exclusive_store": "Our Exclusive Store",
   "exclusive_store_desc": "Our offline exclusive store at abc is a favorite destination for luxury abaya collection and designer wears. In addition to a chic collection, the store offers the comfort of female designers and staff for your needs to customize your outfit. Do visit for an impeccable shopping experience that leaves you with irreplaceable additions to your wardrobe.",
   "customized_designer_wear": "Customized designer wear",
   "unique_designs": "Unique designs",
-  "women_employees": "Women employees",
-  "spacious_parking": "Spacious parking",
+  "women_employees": "Managed by Ladies",
+  "spacious_parking": "At the heart of the city",
   "abaya_then_and_now": "Abaya: Then And Now",
   "abaya_then_and_now_desc1": "A long cloak or robe, popularly known as Abaya, also referred to as Aba, Abah, all represent this everyday clothing that effortlessly covers the entire body.",
   "abaya_then_and_now_desc2": "This apparel was initially worn by Islamic women all over the Middle East but now with the escalating demand of abaya globally, it is even worn as high fashion by non-Muslims. Typically black in color, now they come in different styles, with a majority of them embroidered.",
@@ -116,8 +116,6 @@
   "terms_of_use_subtitle9": "9. Privacy",
   "terms_of_use_9_desc1.1": "nishOmi understands that your privacy is important to you and nishOmi is committed to respecting your privacy and to protecting your personally-identifiable information (which is also referred to in some contexts and under some applicable laws as your personal data). nishOmi’s ",
   "terms_of_use_9_desc1.2": " describes how nishOmi uses and protects your personally-identifiable information, as well as how and with whom nishOmi may share that information. YOU ARE ENCOURAGED TO PRINT AND TO READ THE PRIVACY POLICY CAREFULLY AND TO CONTACT nishOmi IF YOU HAVE ANY QUESTIONS ABOUT nishOmiS PRIVACY POLICY OR THESE TERMS.",
-  "terms_of_use_subtitle10": "10. Governing law; jurisdiction",
-  "terms_of_use_10_desc1": "These Terms are governed by the laws of the State of New York without reference to the principles of conflicts of laws thereof.",
   "featured_products": "Featured Products",
   "choice_for": "Your choice for",
   "elegance_and_glamour": "elegance and glamour.",
