Bug fixes, Added validation, Slider modifications

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -180,7 +180,9 @@
     "contact_number_mandatory": "الرجاء إدخال رقم الاتصال الخاص بك.",
     "address_mandatory": "الرجاء إدخال عنوانك.",
     "email_id_invalid": "الرجاء إدخال معرف بريد إلكتروني صالح.",
-    "contact_number_invalid": "الرجاء إدخال رقم اتصال صحيح."
+    "contact_number_invalid": "الرجاء إدخال رقم اتصال صحيح.",
+    "size": "الرجاء اختيار الحجم.",
+    "custom_size": "الرجاء إدخال الحجم المخصص."
   },
   "success": {
     "order": "شكرا لتقديم هذا الطلب. سنقوم بتوصيلك قريبًا وتسليم هذا المنتج إلى عنوانك.",
