--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -164,7 +164,7 @@
     "order_now": "طلبية  الآن",
     "place_order": "ضع طلبية",
     "send_product_interest": "أرسل اهتمامًا بالمنتج",
-    "updating": "التحديث"
+    "wait": "أرجو الإنتظار"
   },
   "label": {
     "full_name": "اسم الكامل",
