--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -164,7 +164,7 @@
     "order_now": "Order Now",
     "place_order": "Place an Order",
     "send_product_interest": "Send a product Interest",
-    "updating": "Updating"
+    "wait": "Please wait"
   },
   "label": {
     "full_name": "Full Name",
