added acknowledment mail

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -173,9 +173,15 @@
     "address": "عنوان :",
     "message": "الرسائل",
     "accept_label": "أقبل هذا",
-    "street":"أقبل هذا",
-    "post":"أقبل هذا",
-    "country":"أقبل هذا"
+    "street":"شارع أو حي",
+    "post":"رقم صندوق البريد",
+    "country":"دولة",
+    "ksa":"المملكة العربية السعودية",
+    "qatar":"قطر",
+    "oman":"سلطنة عمان",
+    "bahrain":"مملكة البحرين",
+    "uae":"الإمارات العربية المتحدة",
+    "kuwait":"الكويت"
   },
   "error": {
     "tac_mandatory": "الرجاء قبول الشروط والأحكام قبل المتابعة.",
@@ -185,7 +191,7 @@
     "address_mandatory": "الرجاء إدخال عنوانك.",
     "email_id_invalid": "الرجاء إدخال معرف بريد إلكتروني صالح.",
     "contact_number_invalid": "الرجاء إدخال رقم اتصال صحيح.",
-    "post_mandatory":"Please enter your post",
+    "post_mandatory":"الرجاء إدخال رسالتك",
     "size": "الرجاء اختيار الحجم.",
     "custom_size": "الرجاء إدخال الحجم المخصص.",
     "something_went_wrong": "هناك خطأ ما. الرجاء معاودة المحاولة في وقت لاحق."
