Fixed the country dropdown style and other bug fixes

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -176,12 +176,13 @@
     "street":"شارع أو حي",
     "post":"رقم صندوق البريد",
     "country":"دولة",
-    "ksa":"المملكة العربية السعودية",
-    "qatar":"قطر",
-    "oman":"سلطنة عمان",
-    "bahrain":"مملكة البحرين",
-    "uae":"الإمارات العربية المتحدة",
-    "kuwait":"الكويت"
+    "ksa":"(966)المملكة العربية السعودية",
+    "qatar":"(974)قطر",
+    "oman":"(968)سلطنة عمان",
+    "bahrain":"(973)مملكة البحرين",
+    "uae":"(971)الإمارات العربية المتحدة",
+    "kuwait":"(965)الكويت",
+    "selectcountry":"اختار الدولة"
   },
   "error": {
     "tac_mandatory": "الرجاء قبول الشروط والأحكام قبل المتابعة.",
@@ -194,7 +195,8 @@
     "post_mandatory":"الرجاء إدخال رسالتك",
     "size": "الرجاء اختيار الحجم.",
     "custom_size": "الرجاء إدخال الحجم المخصص.",
-    "something_went_wrong": "هناك خطأ ما. الرجاء معاودة المحاولة في وقت لاحق."
+    "something_went_wrong": "هناك خطأ ما. الرجاء معاودة المحاولة في وقت لاحق.",
+    "select_country":"الرجاء تحديد بلدك"
   },
   "success": {
     "order": "شكرا لتقديم هذا الطلب. سنقوم بتوصيلك قريبًا وتسليم هذا المنتج إلى عنوانك.",
