button style modifications

--- a/Web/src/assets/i18n/ar.json
+++ b/Web/src/assets/i18n/ar.json
@@ -2,20 +2,20 @@
   "en": "English",
   "ar": "عربى",
   "home": "الصفحة الرئيسية",
-  "our_products": "المنتجات تنا",
+  "our_products": "منتجاتنا",
   "blogs": "المدونة",
   "stay_in_touch": "ابق على تواصل",
   "privacy_policy": "سياسة الخصوصية",
   "terms_and_conditions": "الشروط والأحكام",
   "view_products": "مشاهدة المنتجات",
   "our_story": "قصتنا",
-  "copyright": "العبايات نيش اومي 2020 ((c",
+  "copyright": "٢٠٢٠ عبايات نيشومي ©️",
   "traditional_elegance_details": "تجمع نيشومي بين التصاميم المبتكرة والخامات التي تم اختيارها بدقة والتي تعبر عن الأناقة والفخامة والأزياء العصرية. تم تصميم كل قطعة لتكون الأفضل من نوعها مع جودة متميزة وتصاميم لا يوجد لها مثيل هدفها الاحتفال بالنساء والشغف في الأزياء الراقية، يهدف  نيشومي لتحقيق الرقي والتطور لجعل كل يوم يومك الأكثر أناقة.",
   "our_founders": "المؤسسون",
   "founder_shemi_desc": "شيمي, هي الحالمه بين الاثنتين. يرجع حبها للملابس والأزياء إلى طفولتها وسنوات المراهقة. في ولاية كيرلا في الهند، أمضت بعض الوقت في تجربة الملابس التقليدية. ومع حبها لتحقيق الهدف، والاستفادة من الأزياء الإسلامية، واكتشاف الامكانيات على الصعيد العالمي، هو في الواقع حلم تحقق بالنسبة لها. تجد الفرح في ابتسامة الرضا على عملائها.",
   "founder_nisha_desc": "نيشا، هي في الأصل هندية من ولاية كيرلا، هي سيدة أعمال متحمسه تحركها مبادئ الإبداع والعمل الشاق. و هي تجد ارتياحاً هائلاً في العثور على الابداع في التصاميم والحداثة في الملابس. متحمسه مع التطور الذي يحدث بينهم، نيشا، هي بالتأكيدة تسترشد بقوة من قبل شغفها للأزياء وحبها في إدخال التصاميم المبتكره إلى السوق.",
   "exclusive_store": "متجرنا الحصري",
-  "exclusive_store_desc": "متجرنا الحصري في اي بي سي هو الوجهة المفضلة لمجموعات العبايات الفاخرة والأنيقة المصمم بأحدث التصاميم. يوفر المتجر المصممات والموظفات لتلبية احتياجك بكل اريحية. قم بزيارتنا لتجربة جميلة والتي سوف تترك مع إضافات لا تعوض إلى خزانة الملابس الخاصة بك.",
+  "exclusive_store_desc": "متجرنا الحصري في الفجيرة هو الوجهة المفضلة لمجموعات العبايات الفاخرة والأنيقة المصمم بأحدث التصاميم. يوفر المتجر المصممات والموظفات لتلبية احتياجك بكل اريحية. قم بزيارتنا لتجربة جميلة والتي سوف تترك مع إضافات لا تعوض إلى خزانة الملابس الخاصة بك.",
   "customized_designer_wear": "عبايات مصممه حسب الطلب",
   "unique_designs": "تصاميم فريدة من نوعها",
   "women_employees": "موظفات لخدمتك بكل حب",
