--- a/Web/src/assets/i18n/en.json
+++ b/Web/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
   "founder_shemi_desc": "Shemi is the dreamer among the two. She traces back her love for clothing and fashion to her childhood and teenage years. She spent time in experimenting with traditional attires. Resonating with the collective goal, tapping on Islamic fashion, and discovering its potential globally is indeed a dream come true for her. She finds joy in the smile of contentment on her customers.",
   "founder_nisha_desc": "Nisha is a passionate entrepreneur who is driven by the principles of creativity and hard work. She finds immense satisfaction in finding novelty in the designs and modernity in clothing. Excited and thrilled as they progress, Nisha, is definitely the doer strongly guided by the passion for fashion and thrill in introducing original designs to the market.",
   "exclusive_store": "Our Exclusive Store",
-  "exclusive_store_desc": "Our offline exclusive store at abc is a favorite destination for luxury abaya collection and designer wears. In addition to a chic collection, the store offers the comfort of female designers and staff for your needs to customize your outfit. Do visit for an impeccable shopping experience that leaves you with irreplaceable additions to your wardrobe.",
+  "exclusive_store_desc": "Our offline exclusive store at Fujairah is a favorite destination for luxury abaya collection and designer wears. In addition to a chic collection, the store offers the comfort of female designers and staff for your needs to customize your outfit. Do visit for an impeccable shopping experience that leaves you with irreplaceable additions to your wardrobe.",
   "customized_designer_wear": "Customized designer wear",
   "unique_designs": "Unique designs",
   "women_employees": "Managed by Ladies",
